# securevector-guardian-model

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml  develop-preview-publish.yml  protection-probe.yml  release.yml
docs/: ATTACK_COVERAGE.md
scripts/: bundle_runtime.py
src/svguardian/: __init__.py  _bundle.py  cli.py  decode.py  serve.py  server.py  types.py  window.py
src/svguardian/_runtime/: __init__.py
src/svguardian/data/: augment.py  build_dataset.py  loaders.py
src/svguardian/eval/: evaluate.py  longdoc_eval.py  redteam_eval.py
src/svguardian/model/: compare.py  export.py  infer.py  pure_infer.py  train.py
tests/: test_behavior.py  test_eval_frontier.py  test_parity.py  test_provenance_and_leak.py
