[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
# PyPI distribution name (matches the repo). The import name stays
# `svguardian` — distribution and import names are independent, same as
# scikit-learn / sklearn.
name = "securevector-guardian-model"
version = "1.4.0"
description = "SecureVector Guardian — original, from-scratch offline threat-detection model for prompt & AI attacks"
readme = "README.md"
requires-python = ">=3.10"
# The shipped inference runtime (pure_infer / serve / window / decode / server /
# cli) is STDLIB-ONLY — zero runtime dependencies. ML libraries are needed only
# to TRAIN/EXPORT and are optional extras. All permissive (BSD-3 / MIT). No
# pretrained model weights.
dependencies = []

[project.optional-dependencies]
train = [
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "scipy>=1.10",
    "PyYAML>=6.0",
    "joblib>=1.3",
]

[project.scripts]
svguardian = "svguardian.cli:main"
svguardian-server = "svguardian.server:main"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

[tool.setuptools.package-data]
# The trained runtime is bundled INTO the wheel at build time (copied into
# src/svguardian/_runtime/ by scripts/bundle_runtime.py just before `build`).
# It is gitignored, so it is never in source control — but it IS in every
# published wheel, which is what makes `pip install` offline and `pip -U`
# update the model. setuptools reads package-data off disk at build time and
# does not consult .gitignore, so the gitignored bundle still ships.
"svguardian._runtime" = ["*.json.gz", "*.json.gz.sha256"]
